<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_marginEnd="20dp"
            android:textAlignment="center" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile_place_holder"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ProfileImageShape"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/name_profile"
            style="@style/SecondaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_profile"
            app:layout_constraintEnd_toStartOf="@id/logout"
            app:layout_constraintStart_toEndOf="@id/profile_image_profile"
            app:layout_constraintTop_toTopOf="@id/profile_image_profile" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="#FF4F4F"
            android:contentDescription="@string/logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/gray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_layout"/>

    <TextView
        android:id="@+id/orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_orders"
        style="@style/SecondaryText"
        android:layout_margin="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/address_bg"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>